Bug 324483 - in debug builds, we sleep 300 seconds to allow a developer time to attach to the dying process with gdb.  This patch  adds code to check the env var MOZ_GDB_SLEEP to specify a different duration.